upgrade gradle, jdk and use virtual thread